--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.120.1
-uvicorn==0.38.0
-sqlalchemy==2.0.44
-pydantic==2.12.3
-alembic==1.17.0
-python-dotenv==1.2.1
+fastapi
+uvicorn
+sqlalchemy
+pydantic
+alembic
+python-dotenv
